--- a/core/src/main/web/app/styles/header.scss
+++ b/core/src/main/web/app/styles/header.scss
@@ -24,9 +24,10 @@ html .navbar {
     }
 
     .brand {
-        padding-bottom: 7px;
+        padding: 10px 23px 7px;
 
         img {
+            margin-top: -7px;
             height: 22px;
         }
     }
@@ -40,7 +41,7 @@ html .navbar {
     position: relative;
     left: -10px;
     width: 100%;
-    padding: 0 8px;
+    padding: 0 10px;
     height: 39px;
     box-shadow: 0px 1px 2px rgba(26, 26, 26, 0.39);
     -webkit-box-shadow: 0px 1px 2px rgba(26, 26, 26, 0.39);
